--- a/问题咨询.md
+++ b/问题咨询.md
@@ -1,2 +1,4 @@
-感谢您的使用和支持，有任何疑问请加群咨询，加qq群请备注需要咨询的问题，我们会在通过的第一时间回复您问题
-QQ群2：371794256
+# 问题咨询
+
+- 感谢您的使用和支持，有任何疑问请加群咨询，加qq群请备注需要咨询的问题，我们会在通过的第一时间回复您问题
+- QQ群2：371794256
